# NequIP-LES

./: .gitignore  README.md  pyproject.toml
configs/: README.md  get_tutorial_data.py  test_bec_xyz.yaml  test_bec_xyz_callback.yaml  test_bec_xyz_modifier.yaml  tutorial_les.yaml  tutorial_les_compile.yaml  tutorial_les_extension.yaml
nequip_les/: __init__.py  _extern.py  _keys.py  _version.py
nequip_les/data/: __init__.py  _keys.py
nequip_les/model/: __init__.py  les_model.py  les_output.py
nequip_les/nn/: __init__.py  edge_product.py  les.py  les_output.py  node_product.py
nequip_les/train/: __init__.py
nequip_les/train/callbacks/: __init__.py  les_bec_option.py  write_xyz.py
